5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1811_2571.log
== TEST (2019-06-11 19:39:11) 
-- CODE:
sa=input("digite o testo: ")
s=("")
print(size(sa))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(size(sa))
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:41:46) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=("")
for i in range (size(sa)):
	if(sa[i]!=a) or (sa[i]!=A):
		s[i]=s[i]+sa[i]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:42:10) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=("")
for i in range (size(sa)):
	if(sa[i]!="a") or (sa[i]!="A"):
		s[i]=s[i]+sa[i]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:45:39) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=("")
a=0
q=0
for i in range (size(sa)):
	if(sa[i]!="a") or (sa[i]!="A"):
		a=a+1
for i in range (size(sa)):
		if(sa[i]!="a") or (sa[i]!="A"):
			s[q]=s[q]+m[i]
			q=q+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:46:25) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=("")
a=0
for i in range (size(sa)):
	if(sa[i]!="a") or (sa[i]!="A"):
		a=a+1
q=0
for i in range (size(sa)):
		if(sa[i]!="a") or (sa[i]!="A"):
			s[q]=s[q]+m[i]
			q=q+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:52:39) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
q=0
for i in range (size(sa)):
		if(sa[i]!="a") or (sa[i]!="A"):
			s=s+sa[i]
			q=q+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:53:00) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
q=0
for i in range (size(sa)):
		if(sa[i]!="a") or (sa[i]!="A"):
			s=s+sa[i]
			
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:56:13) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in range (size(sa)):
		if(sa[i]!="a") and (sa[i]!="A"):
			s=s+sa[i]
			
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:56:37) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in range (size(sa)):
		if(sa[i]!="a") and (sa[i]!="A"):
			s=s+sa[i]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:57:02) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in range (size(sa)):
		if(sa[i]!="a") or (sa[i]!="A"):
			s=s+sa[i]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:57:10) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in range (size(sa)):
		if(sa[i]!="a") or (sa[i]!="A"):
			s=s+sa[i]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:58:52) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in range (size(sa)):
		if(sa[i]!="a") or (sa[i]!="A"):
			s=s+sa[i]
			print(sa[i])
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:59:35) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in range (size(sa)):
	if(sa[i]!="a") or (sa[i]!="A"):
		s=s+sa[i]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 20:00:20) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in range (size(sa)):
	if(sa[i]!="a") or (sa[i]!="A"):
		s=s+""+sa[i]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 20:00:47) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in sa:
	if(sa[i]!="a") or (sa[i]!="A"):
		s=s+""+sa[i]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 20:01:14) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in sa:
	if(i!="a") or (i!="A"):
		s=s+""+sa[i]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 20:01:21) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in sa:
	if(i!="a") or (i!="A"):
		s=s+""+i
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 20:01:36) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in sa:
	if(i!="a") and (i!="A"):
		s=s+""+i
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 20:01:45) 
-- CODE:
from numpy import*
sa=input("digite o testo: ")
s=""
for i in sa:
	if(i!="a") and (i!="A"):
		s=s+""+i
print(s)
-- EXECUTION TIME:
1.09758
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
